2009-02-06  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_rules_dialog.c: 
	  Update the object's conditional All/Any activation mode.
	* capplet/nwam_vpn_pref_dialog.c: 
	  Update to provide some better validation, and also handle validation
	  just before selection changes.
	* common/nwamui_enm.c: 
	  Change set_nwam_enm_string_array_prop() to allow you to delete the
	  property if a NULL array is passed.
	  Changed start/stop/fmri set functions to allow you to pass a NULL
	  value.
	* common/nwamui_object.c: 
	  Allow nwamui_object_set_conditions to take NULL to clear the list.

2009-02-05  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.c: (capplet_dialog_run):
	* capplet/capplet-utils.h:
	Fixed a top widget detect nit.
	* capplet/nwam-manager-properties.glade:
	Romved ipsec key related widgets.
	* capplet/nwam_env_pref_dialog.c: (nwam_env_pref_dialog_init),
	(nwam_env_pref_dialog_finalize), (dialog_run),
	(nwam_compose_tree_view), (populate_panels_from_env),
	(svc_button_clicked), (default_svc_status_cb), (apply),
	(combo_cell_strings_value), (combo_changed_strings_value),
	(on_button_toggled), (svc_list_merge_to_model), (populate_svc),
	(fmri_dialog_response_cb):
	Remove unused code. Make OK do things.

2009-02-05  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_env_pref_dialog.c,  capplet/nwam_location_dialog.c,
	  common/nwamui_daemon.c,  common/nwamui_enm.c,  common/nwamui_env.c,
	  common/nwamui_env.h,  common/nwamui_ncp.c,  common/nwamui_ncp.h,
	  common/nwamui_ncu.c,  common/nwamui_ncu.h,  tests/main.c: 
	  Change all read-only methods / properties to use "is_modifiable" and
	  directly pull the information from the nwam_*handle since it's not
	  possible to set it.

2009-02-05  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_condition_vbox.c: 
	  Update rules dialog to match the UI spec w.r.t. the possiblity to
	  select NCU/ENM/LOC/WIFI_NET from a drop-down list or editable combo
	  when the field is selected.